<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AuthFragment"
    android:background="@color/background">

    <ImageView
        android:id="@+id/ivCoachApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/llTextos"
        android:src="@drawable/mainlogo"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llTextos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/ivCoachApp"
        app:layout_constraintStart_toStartOf="@id/ivCoachApp"
        app:layout_constraintEnd_toEndOf="@id/ivCoachApp"
        app:layout_constraintBottom_toTopOf="@id/btnEmpezar">

        <TextView
            android:id="@+id/tvSlogan"
            style="@style/HighlightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slogan" />

        <TextView
            android:id="@+id/tvDisclaimer"
            style="@style/SmallText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btnEmpezar"
        style="@style/PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_empezar"
        android:layout_marginLeft="92dp"
        android:layout_marginRight="92dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnIniciar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnIniciar"
        style="@style/SecondaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_iniciar_sesion"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/btnEmpezar"
        app:layout_constraintEnd_toEndOf="@id/btnEmpezar" />

</androidx.constraintlayout.widget.ConstraintLayout>