<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PlanListoFragment"
    android:background="@color/background">

    <ImageView
        android:id="@+id/ivPlanListo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_rayo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvLabelPlanListo"/>

    <TextView
        android:id="@+id/tvLabelPlanListo"
        style="@style/HighlightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plan_cargado"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/ivPlanListo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llBotones"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llBotones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tvLabelPlanListo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvTienesCuenta"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnAccederMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/main_button_style"
            android:clickable="true">

            <ImageView
                android:id="@+id/ivAccederMail"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:padding="8dp"
                android:src="@drawable/ic_mail"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/tvAccederMail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_accede_mail"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textAlignment="center"
                android:textColor="@color/background"
                android:fontFamily="@font/montserrat_medium"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnAccederFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/facebook_button_style"
            android:layout_marginTop="24dp"
            android:clickable="true">

            <ImageView
                android:id="@+id/ivAccederFacebook"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:padding="8dp"
                android:src="@drawable/ic_facebook"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/tvAccederFaebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_facebook"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_medium"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnAccederGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/google_button_style"
            android:clickable="true">

            <ImageView
                android:id="@+id/ivAccederGoogle"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:padding="8dp"
                android:src="@drawable/ic_gmail"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/tvAccederGoogle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_google"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_medium"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>



    <TextView
        android:id="@+id/tvTienesCuenta"
        style="@style/HighlightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tienes_cuenta"
        android:textSize="24sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/llBotones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnIniciar"/>

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_inicia_sesion"
        android:background="@drawable/secondary_button_style"
        app:backgroundTint="@null"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvTienesCuenta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>