<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GeneroFragment"
    android:background="@color/background">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llStepper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:weightSum="17">

        <View
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:background="@color/main_action_color"
            android:layout_weight="2"/>

        <View
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:background="@color/background"
            android:layout_weight="1"/>

        <View
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:background="@color/white"
            android:layout_weight="2"/>

        <View
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:background="@color/background"
            android:layout_weight="1"/>

        <View
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:background="@color/white"
            android:layout_weight="2"/>

        <View
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:background="@color/background"
            android:layout_weight="1"/>

        <View
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:background="@color/white"
            android:layout_weight="2"/>

        <View
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:background="@color/background"
            android:layout_weight="1"/>

        <View
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:background="@color/white"
            android:layout_weight="2"/>

        <View
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:background="@color/background"
            android:layout_weight="1"/>

        <View
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:background="@color/white"
            android:layout_weight="2"/>

        <View
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:background="@color/background"
            android:layout_weight="1"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tvGenero"
        style="@style/QuestionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pregunta_genero"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/llStepper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ivGenero" />

    <ImageView
        android:id="@+id/ivGenero"
        android:layout_width="0dp"
        android:layout_height="164dp"
        android:src="@drawable/ic_genero"
        app:layout_constraintTop_toBottomOf="@+id/tvGenero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llBotones"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llBotones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/ivGenero"
        app:layout_constraintBottom_toTopOf="@id/btnContinuar"
        app:layout_constraintStart_toStartOf="@id/btnContinuar"
        app:layout_constraintEnd_toEndOf="@id/btnContinuar">

        <Button
            android:id="@+id/btnGeneroFemenino"
            style="@style/SelectableButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genero_femenino" />

        <Button
            android:id="@+id/btnGeneroMasculino"
            style="@style/SelectableButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genero_masculino"
            android:layout_marginTop="16dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <Button
        android:id="@+id/btnContinuar"
        style="@style/PrimaryButton"
        android:text="@string/btn_continuar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>